--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
-    "module": "ESNext",
-    "target": "ES6",
-    "esModuleInterop": true,
-    "moduleResolution": "Node",
     "outDir": "./dist",
-    "rootDir": "./src",
-    "resolveJsonModule": true
+    "rootDir": "./src", 
+    "moduleResolution": "node",
+    "module": "ESNext",
+    "target": "ESNext",
+    "strict": true
   },
-  "include": ["src/**/*.ts", "node_modules"],
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
