--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "type": "module",
   "scripts": {
-    "start": "node dist/app.js",
-    "dev": "tsx app.ts"
+    "start": "node app.js"    
   },
   "dependencies": {
     "cors": "^2.8.5",
