--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,6 @@
     "rootDir": "./src",
     "resolveJsonModule": true
   },
-  "include": ["src/**/*.ts", "node_modules"],
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
