--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "type": "module",
   "scripts": {
-    "start": "node dist/app.js"    
+    "start": "node dist/app.js",    
+     "build": "tsc"
   },
   "dependencies": {
     "cors": "^2.8.5",
